k8s/apps/internal/ojwan/calculon/jellyfin/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  namespace: ojwan
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`calculon.ojwan.org`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: ojwan-ip-list
          namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: ojwan-org-tls
